2008-11-01 21:35-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSWindow.m: Reverted a previous change to miniaturize.
	This should correct bug #24707.

2008-10-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSNibCompatibility.m: Define the needed GSIARRAY
	constants, this helps against valgrind complaining. 

2008-10-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep+ICNS.m
	(icns_get_image32_with_mask_from_family):  Protect against buffer
	overfow detected by valgrind. 

2008-10-29 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBrowser.m (-drawTitle:inRect:ofColumn:, -dealloc): Set
	and unset the ownership of the shared title cell.
	Patch by Matt Rice <ratmice@gmail.com>.

2008-10-24 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenu.m (-indexOfItemWithTarget:andAction:): Compare the
	target for identity not equality.
	* Source/NSWindowController.m (+initialize,
	-initWithCoder:,-encodeWithCoder:): Add encoding and decoding, just
	calling super. 
	Patch by Wolfgang Lux <wolfgang.lux@gmail.com>. 
	* Source/NSApplication.m (-targetForAction:forWindow:): New helper
	method. Don't stop at the window itself, when going up the
	responder chain.
	* Source/NSApplication.m (-targetForAction:): Use the new helper
	method. 

2008-10-23 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSWindowController.h: Make a subclass of NSResponder.
	* Source/NSWindowController.m (-setWindow:): Manage the responder
	chain.
	Patch by Wolfgang Lux <wolfgang.lux@gmail.com>. 

2008-10-21  Adam Fedor  <fedor@gnu.org>

	* Source/NSBitmapImageRep+JPEG.m: Fix broken boolean definition.

2008-10-20 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSWindowDecorationView.h,
	* Source/GSWindowDecorationView.m
	(-contentRectForFrameRect:styleMask:,
	-frameRectForContentRect:styleMask): New instance methods.
	* Source/NSWindow.m: Use these new methods.

2008-10-19 Riccardo Mottola <rmottola@users.sf.net>>
